crates/ditto-checker/tests/golden/type-errors/argument_length_mismatch_2.ditto
module Test exports (..);

my_fn = fn (x: Int, y: Int, z: Int) -> 5;

five = my_fn(10);
